Bug 754426 - get screen depth from the main thread, expose it to other threads via gfxAndroidPlatform - r=joe