gfx/thebes/gfxAndroidPlatform.h
@@ -103,7 +103,10 @@ public:
 
     FT_Library GetFTLibrary();
 
+    virtual int GetScreenDepth() const;
+
 private:
+    int mScreenDepth;
     gfxImageFormat mOffscreenFormat;
 };
 
